fixed carousel overflow

--- a/src/index.css
+++ b/src/index.css
@@ -3,6 +3,7 @@
     --color-foreground: rgb(36, 36, 36);
     --color-background: #fff;
 
+    --carousel-background: rgb(248, 248, 248);
     --card-width: 300px;
     --card-height: 220px;
     --card-background: rgb(250, 250, 250);
@@ -32,6 +33,7 @@ body {
 }
 #contentContainer{
     max-width: 1000px;
+    overflow: hidden;
 }
 img{
     width: 100%;
@@ -165,10 +167,15 @@ img{
 }
 
 .carousel{
+    /* takes width of container */
+    width:100%;
+    overflow: scroll;
     display:flex;
     justify-content: space-between;
     align-items: center;
-
+    /* background-color: var(--carousel-background);
+    border-radius: 16px;
+    box-shadow: rgba(0, 0, 0, 0.082) 0px 0px 12px -2px inset; */
 }
 
 section{
